set up tsup for faster builds

--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
+    "type-check": "turbo run type-check",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "test": "turbo run test"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "eslint": "^9.26.0",
     "prettier": "^3.5.3",
+    "rimraf": "^6.0.1",
+    "tsup": "^8.4.0",
     "turbo": "^2.5.3",
     "typescript": "^5.8.3"
   },
