--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
+    "@vitest/coverage-v8": "^3.1.3",
     "eslint": "^9.26.0",
+    "eslint-plugin-n": "^16.6.2",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
     "turbo": "^2.5.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.3"
   },
   "engines": {
     "node": ">=18.0.0"
