--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "type-check": "turbo run type-check",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "test:coverage": "turbo run test:coverage --filter=blaizejs"
   },
   "devDependencies": {
     "@types/node": "^22.15.17",
