--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsup --watch --onSuccess \"node examples/basic.ts\"",
+    "dev": "NODE_ENV=development tsup --watch --onSuccess \"node examples/basic.ts\"",
     "build": "tsup",
     "build:watch": "tsup --watch",
     "type-check": "tsc --noEmit",
@@ -27,6 +27,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "selfsigned": "^2.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@blaizejs/tsup-config": "workspace:*",
     "@blaizejs/vitest-config": "workspace:*",
     "@types/node": "^22.15.17",
+    "@types/selfsigned": "^2.1.0",
     "@vitest/coverage-v8": "^3.1.3",
     "vitest": "^3.1.3"
   },
