--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@types/node": "^22.15.17",
     "@vitest/coverage-v8": "^3.1.3",
+    "concurrently": "^9.1.2",
     "eslint": "^9.26.0",
     "eslint-plugin-n": "^16.6.2",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
