--- a/packages/blaize-core/tsconfig.json
+++ b/packages/blaize-core/tsconfig.json
@@ -5,6 +5,6 @@
     "rootDir": "./src",
     "tsBuildInfoFile": "./.tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "src/server/start.test.ts.bak"],
-  "exclude": ["node_modules", "dist", "examples"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist/*.d.ts", "src/examples"]
 }
