🚀 Added support for route registry 🔒 More type safety

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@blaizejs/eslint-config": "workspace:*",
     "@blaizejs/tsconfig": "workspace:*",
-    "@blaizejs/tsup-config": "workspace:*"
+    "@blaizejs/tsup-config": "workspace:*",
+    "@blaizejs/types": "workspace:*"
   }
 }
