Revert "🚀 Added support for route registry 🔒 More type safety"
This reverts commit 727cc5e0d17a720a43e4567a0eddb278a9b416e1.

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@blaizejs/eslint-config": "workspace:*",
     "@blaizejs/tsconfig": "workspace:*",
-    "@blaizejs/tsup-config": "workspace:*",
-    "@blaizejs/types": "workspace:*"
+    "@blaizejs/tsup-config": "workspace:*"
   }
 }
