🏗️ fixed type app routes type defintion

--- a/packages/blaize-types/tsconfig.json
+++ b/packages/blaize-types/tsconfig.json
@@ -13,7 +13,8 @@
     "src/context.ts",
     "src/middleware.ts",
     "src/plugins.ts",
-    "src/router.ts"
+    "src/router.ts",
+    "src/client.ts"
   ],
   "exclude": ["node_modules", "dist/*.d.ts"]
 }
