--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -20,7 +20,7 @@
     "build": "tsup",
     "build:watch": "tsup --watch",
     "type-check": "tsc --noEmit",
-    "test": "vitest run",
+    "test": "vitest run --typecheck",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
