--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@blaizejs/tsconfig/node.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"]
 }
