--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "NODE_ENV=development concurrently \"tsup --watch\" \"nodemon --watch src -e ts --exec 'node src/examples/basic.ts'\"",
+    "dev": "NODE_ENV=development tsx --watch src/examples/basic.ts",
     "build": "tsup",
     "build:watch": "tsup --watch",
     "type-check": "tsc --noEmit",
@@ -41,6 +41,7 @@
     "@types/node": "^22.15.17",
     "@types/selfsigned": "^2.1.0",
     "@vitest/coverage-v8": "^3.1.3",
+    "tsx": "^4.19.4",
     "vitest": "^3.1.3"
   },
   "engines": {
