--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Development playground for BlaizeJS",
   "scripts": {
-    "dev": "NODE_ENV=development tsx --watch src/index.ts",
+    "dev": "NODE_ENV=development tsx --watch src/app.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
