🚀 improved developer experience

--- a/packages/blaize-types/package.json
+++ b/packages/blaize-types/package.json
@@ -15,7 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "tsup",
+    "dev": "tsup --watch",
     "build": "tsup",
     "type-check": "tsc --noEmit"
   },
