--- a/packages/blaize-client/package.json
+++ b/packages/blaize-client/package.json
@@ -16,7 +16,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "NODE_ENV=development tsx --watch",
+    "dev": "NODE_ENV=development tsx",
     "build": "tsup",
     "build:watch": "tsup --watch",
     "type-check": "tsc --noEmit",
