--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local", "tsconfig.json"],
+  "ui": "tui",
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
@@ -39,6 +40,11 @@
       "cache": false
     },
     "test": {
+      "dependsOn": [],
+      "inputs": ["src/**/*.test.ts", "src/**/*.test.tsx"],
+      "cache": false
+    },
+    "test:watch": {
       "dependsOn": [],
       "inputs": ["src/**/*.test.ts", "src/**/*.test.tsx"],
       "cache": false
