--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [20, 22]
+        node-version: [23]
     
     steps:
       - name: Checkout code
