🐛 should test the build i suppose

--- a/turbo.json
+++ b/turbo.json
@@ -39,12 +39,12 @@
       "cache": false
     },
     "test": {
-      "dependsOn": [],
+      "dependsOn": ["^build"],
       "inputs": ["src/**/*.test.ts", "src/**/*.test.tsx"],
       "cache": false
     },
     "test:coverage": {
-      "dependsOn": [],
+      "dependsOn": ["^build"],
       "outputs": ["coverage/**"],
       "cache": false,
       "persistent": true
