🚀 prep core package for publish

--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -2,6 +2,15 @@
   "name": "blaizejs",
   "version": "0.1.0",
   "description": "A blazing-fast, type-safe Node.js framework with file-based routing, powerful middleware, and end-to-end type safety",
+  "author": "J.Lea-Jones <jason@careymarcel.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jleajones/blaize.git"
+  },
+  "homepage": "https://github.com/jleajones/blaize/tree/main/packages/blaize-core#readme",
+  "bugs": {
+    "url": "https://github.com/jleajones/blaize/issues"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
