--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
-    "test:coverage": "turbo run test:coverage --filter=blaizejs"
+    "test:coverage": "turbo run test:coverage --filter=blaizejs",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.4",
     "@types/node": "^22.15.17",
     "@vitest/coverage-v8": "^3.1.3",
     "concurrently": "^9.1.2",
