🔒 Fixed build to include types

--- a/packages/blaize-client/tsconfig.json
+++ b/packages/blaize-client/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@blaizejs/tsconfig/library.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "../../packages",
     "tsBuildInfoFile": "./.tsbuildinfo",
     "exactOptionalPropertyTypes": false,
     "baseUrl": ".",
@@ -10,6 +10,7 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "references": [{ "path": "../blaize-types" }],
+  "include": ["src/**/*.ts", "../../blaize-types/src/index.ts"],
   "exclude": ["node_modules", "dist", "dist/**/*"]
 }
