--- a/packages/blaize-core/tsconfig.json
+++ b/packages/blaize-core/tsconfig.json
@@ -11,6 +11,6 @@
     }
   },
   "references": [{ "path": "../blaize-types" }],
-  "include": ["src/**/*.ts", "../../blaize-types/src/index.ts"],
-  "exclude": ["node_modules", "dist", "dist/**/*"]
+  "include": ["src/**/*.ts", "../blaize-types/src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "dist/**/*", "../blaize-types/dist/**/*"]
 }
