--- a/packages/blaize-types/package.json
+++ b/packages/blaize-types/package.json
@@ -2,21 +2,20 @@
   "name": "@blaizejs/types",
   "version": "0.1.0",
   "description": "Type definitions for BlaizeJS framework",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   },
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "dev": "tsup --watch",
-    "build": "tsup",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
