--- a/packages/blaize-types/package.json
+++ b/packages/blaize-types/package.json
@@ -4,6 +4,7 @@
   "description": "Type definitions for BlaizeJS framework",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "private": true,
   "exports": {
     ".": {
       "types": "./src/index.ts",
