--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,10 @@ name: Test
 on:
   pull_request:
     branches: [ main, develop ]
+    types: [opened, synchronize, reopened]
   push:
     branches: [ main, develop ]
+  workflow_dispatch:
 
 jobs:
   test:
