--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -53,6 +53,7 @@
     "@types/selfsigned": "^2.1.0",
     "@vitest/coverage-v8": "^3.1.3",
     "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
     "vitest": "^3.1.3"
   },
   "keywords": [
