--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -54,6 +54,7 @@
     "@vitest/coverage-v8": "^3.1.3",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.3"
   },
   "keywords": [
