✨ enhance gha with manual trigger option

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ on:
       - '!configs/**'
       - '!**/*.md'
       - '!.github/workflows/**'
+  workflow_dispatch:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
