--- a/packages/blaize-core/package.json
+++ b/packages/blaize-core/package.json
@@ -29,8 +29,8 @@
   ],
   "scripts": {
     "dev": "NODE_ENV=development tsx --watch src/examples/basic.ts",
-    "build": "tsup",
-    "build:watch": "tsup --watch",
+    "build": "NODE_ENV=production tsup --minify",
+    "build:watch": "NODE_ENV=production tsup --watch",
     "type-check": "tsc --noEmit",
     "test": "vitest run --typecheck",
     "test:watch": "vitest",
@@ -39,8 +39,6 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "chokidar": "^4.0.3",
-    "selfsigned": "^2.4.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
@@ -52,6 +50,8 @@
     "@types/node": "^22.15.17",
     "@types/selfsigned": "^2.1.0",
     "@vitest/coverage-v8": "^3.1.3",
+    "chokidar": "^4.0.3",
+    "selfsigned": "^2.4.1",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4",
