--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
+    "tsx": "^4.19.4",
     "turbo": "^2.5.3",
     "typescript": "^5.8.3",
     "vitest": "^3.1.3"
