--- a/packages/blaize-client/package.json
+++ b/packages/blaize-client/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^22.15.17",
     "@vitest/coverage-v8": "^3.1.3",
     "tsx": "^4.19.4",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.3"
   },
   "keywords": [
