--- a/packages/blaize-types/tsconfig.json
+++ b/packages/blaize-types/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@blaizejs/tsconfig/library.json",
   "compilerOptions": {
+    "lib": ["ES2022", "DOM"],
     "outDir": "./dist",
     "rootDir": "./src",
     "tsBuildInfoFile": "./.tsbuildinfo",
