--- a/packages/blaize-client/package.json
+++ b/packages/blaize-client/package.json
@@ -49,6 +49,8 @@
     "@blaizejs/vitest-config": "workspace:*",
     "@types/node": "^22.15.17",
     "@vitest/coverage-v8": "^3.1.3",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^27.0.0",
     "tsx": "^4.19.4",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.3"
