--- a/apps/playground/tsconfig.json
+++ b/apps/playground/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
+    "moduleResolution": "bundler",
+    "module": "ESNext",
     "tsBuildInfoFile": "./.tsbuildinfo"
   },
   "include": ["src/**/*"]
