🏗️ scaffolding for plugins and middleware

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,9 @@ packages:
   # Core packages
   - 'packages/*'
 
+  # Middleware packages
+  - 'middleware/*'
+
   # Plugin packages
   - 'plugins/*'
 
