--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "blaizejs": "workspace:*",
+    "@blaizejs/plugin-metrics": "workspace:*",
     "@blaizejs/client": "workspace:*",
     "zod": "^3.24.4"
   },
