--- a/middleware/security/package.json
+++ b/middleware/security/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "blaizejs": "workspace:*",
     "@blaizejs/eslint-config": "workspace:*",
+    "@blaizejs/testing-utils": "workspace:*",
     "@blaizejs/tsconfig": "workspace:*",
     "@blaizejs/tsup-config": "workspace:*",
     "@blaizejs/vitest-config": "workspace:*",
