--- a/middleware/security/package.json
+++ b/middleware/security/package.json
@@ -49,7 +49,8 @@
     "@blaizejs/vitest-config": "workspace:*",
     "@vitest/coverage-v8": "^3.1.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "zod": "^3.24.4"
   },
   "publishConfig": {
     "access": "public"
