✨ initial commit for Queue plugin

--- a/packages/blaize-core/tsconfig.json
+++ b/packages/blaize-core/tsconfig.json
@@ -10,6 +10,6 @@
       "@blaize-types/*": ["../blaize-types/src/*"]
     }
   },
-  "include": ["src/**/*.ts", "../blaize-types/src/**/*.ts"],
+  "include": ["package.json", "src/**/*.ts", "../blaize-types/src/**/*.ts"],
   "exclude": ["node_modules", "dist", "dist/**/*"]
 }
