✨ initial attempt to use queue

--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -13,6 +13,7 @@
     "@blaizejs/client": "workspace:*",
     "@blaizejs/middleware-security": "workspace:*",
     "@blaizejs/plugin-metrics": "workspace:*",
+    "@blaizejs/plugin-queue": "workspace:*",
     "zod": "^3.24.4"
   },
   "type": "module",
