✨ create EventValidationError Class +tests

--- a/packages/blaize-core/tsconfig.json
+++ b/packages/blaize-core/tsconfig.json
@@ -7,6 +7,7 @@
     "exactOptionalPropertyTypes": false,
     "baseUrl": ".",
     "paths": {
+      "@blaize-types": ["../blaize-types/src/index.ts"],
       "@blaize-types/*": ["../blaize-types/src/*"]
     }
   },
