--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,9 @@ packages:
   # Core packages
   - 'packages/*'
 
+  # Adapter packages
+  - 'adapters/*'
+
   # Middleware packages
   - 'middleware/*'
 
