--- a/plugins/queue/package.json
+++ b/plugins/queue/package.json
@@ -46,14 +46,15 @@
   },
   "devDependencies": {
     "blaizejs": "workspace:*",
+    "@blaizejs/adapter-redis": "workspace:*",
     "@blaizejs/eslint-config": "workspace:*",
     "@blaizejs/testing-utils": "workspace:*",
     "@blaizejs/tsconfig": "workspace:*",
     "@blaizejs/tsup-config": "workspace:*",
     "@blaizejs/vitest-config": "workspace:*",
     "@vitest/coverage-v8": "^3.1.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "publishConfig": {
     "access": "public"
