--- a/adapters/redis/package.json
+++ b/adapters/redis/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "blaizejs": "workspace:*",
+    "@blaizejs/plugin-cache": "workspace:*",
     "@blaizejs/eslint-config": "workspace:*",
     "@blaizejs/testing-utils": "workspace:*",
     "@blaizejs/tsconfig": "workspace:*",
