--- a/packages/blaize-client/tsconfig.json
+++ b/packages/blaize-client/tsconfig.json
@@ -3,11 +3,12 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "../../packages",
-    "lib": ["ES2022", "DOM"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "tsBuildInfoFile": "./.tsbuildinfo",
     "exactOptionalPropertyTypes": false,
     "baseUrl": ".",
     "paths": {
+      "@blaize-types": ["../blaize-types/src/index.ts"],
       "@blaize-types/*": ["../blaize-types/src/*"]
     }
   },
