fix(queue): PR review fixes — handlerRegistry required, z.input for manifest, server logger, changeset

--- a/turbo.json
+++ b/turbo.json
@@ -55,7 +55,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["@blaizejs/testing-utils#build"],
+      "dependsOn": ["@blaizejs/testing-utils#build", "@blaizejs/adapter-redis#build"],
       "inputs": ["src/**/*.test.ts", "src/**/*.test.tsx", "vitest.config.ts"],
       "outputs": [],
       "cache": false,
